--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -14,7 +14,7 @@ services:
   cassandra-seed:
     image: cassandra-armhf
     environment:
-      CASSANDRA_BROADCAST_ADDRESS: "cassandra-seed"
+      #CASSANDRA_BROADCAST_ADDRESS: "cassandra-seed"
       HEAP_NEWSIZE: 12M
       MAX_HEAP_SIZE: 64M
     deploy:
@@ -39,17 +39,11 @@ services:
     environment:
       #CASSANDRA_BROADCAST_ADDRESS: "cassandra"
       #CASSANDRA_SEEDS: "cassandra-seed"
+      SEEDS_SERVICE: "cassandra-seed"
       HEAP_NEWSIZE: 12M
       MAX_HEAP_SIZE: 64M
       TASK_NAME: "{{.Task.Name}}"
       WAIT_TIME: 60
-    entrypoint:
-      - "sh"
-      - "-c"
-      - export CASSANDRA_SEEDS=$$(nrOfTasks=`getent hosts tasks.cassandra | wc -l` ;
-        many=`getent hosts tasks.cassandra | awk '{print $$1}' | sed "/$$(hostname --ip-address)/d"
-        | paste -d, -s -` ; printf '%s' $$( [ $${nrOfTasks} -gt 1 ] && echo $${many} ||
-        echo "$$(hostname --ip-address)" )) ; /boot-wait.sh && /docker-entrypoint.sh cassandra -f
     deploy:
       restart_policy:
         condition: on-failure
